@startuml
class MovieBookingSystem {
    - vector<Movie> movies
    - vector<Cinema> cinemas
    - unique_ptr<ScreeningManager> screeningManager
    + bookTicket(screening, seat)
    + getAvailableSeats(screening)
}
MovieBookingSystem --> ScreeningManager
MovieBookingSystem --> Cinema

class Order {
    - vector<Ticket> tickets
    + getTotalPrice()
}
Order "1" *-- "many" Ticket: has a

class ScreeningManager {
    - map<string, vector<Screening>> screeningsByMovie
    - map<string, vector<Ticket>> ticketsByScreeningId
    + getScreeningsByMovieTitle(string)
    + getAvailableSeatsForScreening(screening)
}
ScreeningManager --> Screening

class Ticket {
    - Screening screening
    - Seat seat
    - double price
}
Ticket --> Screening

class Cinema {
    - string name
    - map<string, Room> roomsByNumber
    + addRoom(room)
}
Cinema "1" *-- "many" Room: have a

class Screening {
    - string screeningId
    - Movie movie
    - Room room
    - long long startMillis
}
Screening --> Movie
Screening --> Room

class Movie {
    - string title
    - int durationInMinutes
}

class Room {
    - string roomNumber
    - Layout layout
}
Room --> Layout

class Layout {
    - string layoutName
    - vector<vector<Seat>> seats
    + Layout(name, rows)
    + addSeatInRow()
    + getSeatByPosition()
    + getAllSeats()
}
Layout "1" --> "many" Seat: has

class Seat {
    - string seatNumber
    - PricingStrategy pricing
}
Seat --> PricingStrategy

abstract PricingStrategy {
    + double getPrice()
}
class NormalRate implements PricingStrategy
class PremiumRate implements PricingStrategy
class VIPRate implements PricingStrategy
@enduml